syntax = "proto3";
package api;

// EventStore is for NATS pub/sub
message EventStore {
    string aggregate_id = 1;
    string aggregate_type = 2;
    string event_id = 3;
    string event_type = 4;
    string event_data = 5;
}

service CenterService {
    rpc SetDevInitConfig(SetDevInitConfigRequest) returns (SetDevInitConfigResponse) {}
    rpc SaveDevData(SaveDevDataRequest) returns (SaveDevDataResponse) {}
}

message DevMeta {
    string type = 1;
    string name = 2;
    string mac = 3;
}

message SetDevInitConfigRequest {
    int64 time = 1;
    DevMeta meta = 2;
}
message SetDevInitConfigResponse {
    bytes config = 1;
}

message SaveDevDataRequest {
    int64 time = 1;
    DevMeta meta = 2;
    bytes data = 3;
}
message SaveDevDataResponse {
    string status = 1;
}
