syntax = "proto3";
package pb;

// Run protoc -I pb/ pb/fridgems.proto --go_out=plugins=grpc:pb
// to generate fridgems.pb.go

service DevService {
    rpc SaveDevData(SaveDevDataRequest) returns (SaveDevDataResponse) {}
    rpc GetDevConfig(GetDevConfigRequest) returns (GetDevConfigResponse)
}

message DevMeta {
    string type = 1;
    string name = 2;
    string mac = 3;
}

message FridgeData {
    map<int64, float> TempCam1  = 1;
    map<int64, float> TempCam2  = 2;
}

message SaveDevDataRequest {
    string action = 1;
    int64 time = 2;
    DevMeta meta = 3;
    bytes data = 4;
}
message SaveDevDataResponse {
    string status = 1;
}

message GetDevConfigRequest {
    bool turnedOn = 1;
    int64 collectFreq = 2;
    int64 sendFreq = 3;
    string mac = 4;
}
message GetDevConfigResponse {
    string status = 1;
}
